[gd_scene load_steps=9 format=3 uid="uid://s3xpcm3xm6ik"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_i62xm"]
[ext_resource type="FontFile" uid="uid://cnxpdlmys4cvg" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_pe86n"]
[ext_resource type="Texture2D" uid="uid://d3l4vfso32mgy" path="res://Assets/Sprites/astro2.png" id="3_vv3ts"]
[ext_resource type="Texture2D" uid="uid://cwi1xeblcxue0" path="res://Assets/Sprites/astro1.png" id="4_jq72x"]
[ext_resource type="Texture2D" uid="uid://de7i0d68p0clh" path="res://Assets/Sprites/astro3.png" id="5_pqi27"]
[ext_resource type="Texture2D" uid="uid://0lmhoonw6ei7" path="res://Assets/Sprites/astro4.png" id="6_kjaww"]
[ext_resource type="Texture2D" uid="uid://dxrnab177077r" path="res://Assets/Sprites/player.png" id="7_bla1p"]

[sub_resource type="Theme" id="Theme_hv0jb"]
default_font = ExtResource("2_pe86n")
default_font_size = 30

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i62xm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -159.0
offset_right = 183.0
offset_bottom = -25.0
grow_vertical = 0
theme = SubResource("Theme_hv0jb")
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Music")
text = "Play"

[node name="Music" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Music")
focus_neighbor_bottom = NodePath("../Play")
text = "Quit"

[node name="Astro2" type="Sprite2D" parent="."]
position = Vector2(634, 207)
texture = ExtResource("3_vv3ts")

[node name="Astro1" type="Sprite2D" parent="."]
position = Vector2(398, 168)
texture = ExtResource("4_jq72x")

[node name="Astro3" type="Sprite2D" parent="."]
position = Vector2(692, 410)
texture = ExtResource("5_pqi27")

[node name="Astro4" type="Sprite2D" parent="."]
position = Vector2(824, 134)
texture = ExtResource("6_kjaww")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(473, 365)
rotation = 0.476475
texture = ExtResource("7_bla1p")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
